Fix "closed for holiday" overflow issue

--- a/src/styles/global/_opening-hours.scss
+++ b/src/styles/global/_opening-hours.scss
@@ -5,6 +5,7 @@
       text-align: center;
       border-radius: 5px;
       color: white;
+      font-size: 0.9em;
       font-weight: $font-weight-normal;
     }
 
